syntax = "proto3";

package client;

service ClientService {
  rpc Deliver (DeliverRequest) returns (DeliverResponse);
}

message DeliverRequest {
  string payload = 1;
}

message DeliverResponse {
  bool success = 1;
}